Fixed Gap For Displaying Photos

--- a/react-app/src/components/ImageCard/ImageCard.css
+++ b/react-app/src/components/ImageCard/ImageCard.css
@@ -6,7 +6,7 @@
 .image-card-image {
   width: 100%;
   min-width: 200px;
-  max-width: 725px;
+  max-width: 1000px;
   max-height: 270px;
   height: auto;
   object-fit: cover;
